# picviz

./: CMakeLists.txt  Makefile  README
doc/: ex1.pcv  full-archi.kivio  manual.html
samples/: test1.pcv  test2.pcv
src/: CMakeLists.txt
src/frontend/: Makefile  picviz-gui.py  picviz.ui
src/frontend/PicvizGui/: axisgui.py  selection.py
src/libpicviz/: CMakeLists.txt  axis.c  build-unit-tests.sh  debug.c  engine.c  fifo-read.c  image.c  line.c  picviz.pc.cmake  plugins.c  render.c  utils.c  utils.h  values-mapping.c  variable.c
src/libpicviz/bindings/: CMakeLists.txt  libpicviz.i
src/libpicviz/bindings/python/: CMakeLists.txt  py-picviz.c  py-picviz.h  setup.py
src/libpicviz/include/: axis.h  common.h  debug.h  defaults.h  engine.h  fifo-read.h  image.h  line.h  linuxlist.h  pcimage.h  picviz.h  plugins.h  properties.h  render.h  types.h  values-mapping.h  variable.h
src/libpicviz/parser/: Makefile  lexer.c  lexer.l  parser.c  parser.h  parser.y  shared.h  test.pcv  variables.c  variables.h
src/libpicviz/plugins/output/: CMakeLists.txt  outpng.c
src/libpicviz/plugins/output/sample/: Makefile  libsvg.c
src/libpicviz/props/: color.c  color.h
src/libpicviz/tests/: Makefile  test-colors.c  test-var-char.pcv  test-var-gold.pcv  test-var-integer.pcv  test-var-ipv4.pcv  test-var-short.pcv  test-var-string1.pcv  test-var-string2.pcv  test-vars.sh  test1.c  test2.c  test3.c  test4.c
src/libpicviz/tests/bindings/python/: ex1.py
tools/: apache-access2picviz  apache-error2picviz  csv2picviz.pl  named2picviz.pl  syslog-iptables2picviz  syslog2picviz.pl  tcpdumpplain2picviz
