# This is a CMake libpicviz for Python

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(libpicviz.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(libpicviz.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(libpicviz python example.i example.cxx)
SWIG_LINK_LIBRARIES(libpicviz ${PYTHON_LIBRARIES})
# This is a CMake libpicviz for Python

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(libpicviz.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(libpicviz.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(libpicviz python libpicviz.i libpicviz.cxx)
SWIG_LINK_LIBRARIES(libpicviz ${PYTHON_LIBRARIES})

