if(ENABLE_python)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

include_directories(${picviz_SOURCE_DIR}/src/libpicviz/include)

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(libpicviz.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(libpicviz.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(picviz python libpicviz.i)
SWIG_LINK_LIBRARIES(picviz ${PYTHON_LIBRARIES})

install(
TARGETS _picviz
LIBRARY
DESTINATION ${PYTHON_INSTDIR}
)

set(PERM_SCRIPTS
OWNER_READ
OWNER_WRITE
OWNER_EXECUTE
GROUP_READ
GROUP_EXECUTE
WORLD_READ
WORLD_EXECUTE
)
install(
FILES ${CMAKE_CURRENT_BINARY_DIR}/plplot.py
DESTINATION ${PYTHON_INSTDIR}
)

endif(ENABLE_python)

